@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19960410
+MANIFEST for ded, version t19961227
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
